# vikunja-cli

./: Cargo.toml  known_issue.txt
src/: cli.yml  main.rs
src/api/: label.rs  list.rs  mod.rs  namespace.rs  task.rs  user.rs
src/config/: mod.rs
src/frontend/: mod.rs  task.rs
