[package]
name = "vikunja_cli"
version = "0.1.0"
authors = ["Zedjones <dojoman19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/", features = ["yaml"] }
ureq = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }