[package]
name = "vikunja_cli"
version = "0.1.0"
authors = ["Zedjones <dojoman19@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
envy = "0.4.1"
cursive = "0.14"
cursive-async-view = "0.3.1"
crossbeam = "0.7.3"